Fix silly form layout bug

--- a/client/common/sass/base/mixins/_forms.sass
+++ b/client/common/sass/base/mixins/_forms.sass
@@ -34,12 +34,14 @@
 	textarea
 		border: 1px solid $gray20
 		padding: 0.3em 0.5em
+		width: 100%
 
 	fieldset
 		border: 1px solid $gray50
 		border-radius: $button-border-radius
 		padding: 0.5rem
 		margin-bottom: 1rem
+		width: 100%
 
 	.helptext
 		font-size: 0.9em
